--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -60,7 +60,7 @@
                     </a>
                     <ul class="dropdown-menu text-dark" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="{% url 'account' %}">Account</a></li>
-
+                        <li><a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a></li>
                         <li><a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a></li>
 
                         <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
