--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -17,7 +17,19 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                 <li class="nav-item"><a class="nav-link text-dark" href="{% url 'home' %}">Главная</a></li>
                 <li class="nav-item"><a class="nav-link text-dark" href="{% url 'map' %}">Карта</a></li>
-                <li class="nav-item"><a class="nav-link text-dark" href="{% url 'prediction' %}">Прогноз</a></li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" href="{% url 'home' %}" id="navbarDropdownMenuLink" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Прогноз
+                    </a>
+                    <ul class="dropdown-menu text-dark" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="{% url 'prediction' coin='BTC' %}">Bitcoin</a></li>
+                        <li><a class="dropdown-item" href="{% url 'prediction' coin='LTC' %}">Litecoin</a></li>
+                        <li><a class="dropdown-item" href="{% url 'prediction' coin='DOGE' %}">Dogecoin</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add_coin_to_predict' %}">Some coin</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{% url 'home' %}" id="navbarDropdownMenuLink" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
