--- a/cryptomap/templates/base.html
+++ b/cryptomap/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="{% static 'bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
-
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <title>{% block title %}Crypto map{% endblock %}</title>
 
 </head>
