--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -48,6 +48,7 @@
                         Категории товаров
                     </a>
                     <ul class="dropdown-menu text-dark" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="{% url 'all_products' %}">Все товары</a></li>
                         {% for product_category in products_categories %}
                         <li><a class="dropdown-item" href="{{ product_category.get_absolute_url }}">{{product_category.title}}</a></li>
                         {% endfor %}
