--- a/cryptomap/shops/templates/shops/index.html
+++ b/cryptomap/shops/templates/shops/index.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 
-{% for item in page_obj.object_list %}
+{% for item in shopsDescriptions %}
 <div class="card mt-3 mb-3">
   <div class="card-header">
     Категория: <a href="{{ item.category.get_absolute_url }}">{{item.category}}</a>
