--- a/cryptomap/shops/templates/shops/view_shops.html
+++ b/cryptomap/shops/templates/shops/view_shops.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  {{ shops_item.shop.title }} - {{ block.super}}
+  {{ shop.shop.title }} - {{ block.super}}
 {% endblock %}
 
 {% block sidebar %}
@@ -12,21 +12,21 @@
 
 <div class="card mt-3 mb-3">
   <div class="card-header">
-    Категория: <a href="{{ shops_item.category.get_absolute_url }}">{{shops_item.category}}</a>
+    Категория: <a href="{{ shop.category.get_absolute_url }}">{{shop.category}}</a>
   </div>
   <div class="card-body">
     <div class="media">
-      {% if shops_item.photo %}
-      <img src="{{ shops_item.photo.url}}" width="350" class="mr-3" alt="">
+      {% if shop.photo %}
+      <img src="{{ shop.photo.url}}" width="350" class="mr-3" alt="">
       {% else %}
       <img src="https://picsum.photos/id/1060/200/300/?blur" alt="">
       {% endif %}
       <div class="media-body">
-        <h5 class="card-title">{{shops_item.shop.title}}</h5>
-        <p class="card-text">{{shops_item.shop.address}}</p>
-        <p class="card-text">{{shops_item.email}}</p>
-        <p class="card-text">{{shops_item.url}}</p>
-        <p class="card-text">{{shops_item.description}}</p>
+        <h5 class="card-title">{{shop.shop.title}}</h5>
+        <p class="card-text">{{shop.shop.address}}</p>
+        <p class="card-text">{{shop.email}}</p>
+        <p class="card-text">{{shop.url}}</p>
+        <p class="card-text">{{shop.description}}</p>
 
         {% for product in products%}
         <div class="card mb-3" style="width: 18rem;">
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="card-footer text-muted">
-    {{shops_item.shop.created_at }}
+    {{shop.shop.created_at }}
   </div>
 </div>
 
