--- a/cryptomap/shops/templates/shops/index.html
+++ b/cryptomap/shops/templates/shops/index.html
@@ -9,6 +9,18 @@
 
 <form action="{% url 'filter' %}" method="get">
   <div class="left-side mt-3">
+    <h4 class="sear-head editContent">Категории</h4>
+    <ul class="w3layouts-box-list">
+      {% for category in view.get_categories %}
+      <li class="editContent">
+        <input type="checkbox" class="checked" name="category" value="{{ category }}">
+        <span class="span editContent">{{ category }}</span>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="left-side mt-3">
     <h4 class="sear-head editContent">Города</h4>
     <ul class="w3layouts-box-list">
       {% for city in view.get_city %}
