доделал фильтр по категориям и магазинам в продуктах

--- a/cryptomap/shops/templates/shops/index.html
+++ b/cryptomap/shops/templates/shops/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  {{ title }} - {{ block.super}}
+  Все магазины - {{ block.super}}
 {% endblock %}
 
 {% block sidebar %}
@@ -64,5 +64,4 @@
   </div>
 </div>
 {% endfor %}
-
 {% endblock %}
