--- a/cryptomap/products/templates/products/product_list.html
+++ b/cryptomap/products/templates/products/product_list.html
@@ -2,6 +2,34 @@
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+<form action="{% url 'shopFilter' %}" method="get">
+  <div class="left-side mt-3">
+    <h4 class="sear-head editContent">Категории</h4>
+    <ul class="w3layouts-box-list">
+      {% for category in view.get_categories %}
+      <li class="editContent">
+        <input type="checkbox" class="checked" name="category" value="{{ category }}">
+        <span class="span editContent">{{ category }}</span>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="left-side mt-3">
+    <h4 class="sear-head editContent">Магазины</h4>
+    <ul class="w3layouts-box-list">
+      {% for shop in view.get_shop %}
+      <li class="editContent">
+        <input type="checkbox" class="checked" name="shop" value="{{ shop }}">
+        <span class="span editContent">{{ shop }}</span>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+  <button type="submit" class="btn btn-primary">Найти</button>
+</form>
+
 {% endblock %}
 
 {% block title %}
@@ -10,7 +38,7 @@
 
 {% block content %}
 
-{% for product_description in object_list %}
+{% for product_description in Product %}
 <div class="card mb-3 mt-3" style="max-width: 740px;">
   <div class="row g-0">
     <div class="col-md-4">
@@ -22,8 +50,10 @@
     </div>
     <div class="col-ml-8 ">
       <div class="card-body mr-1 ml-5">
+
         <h5 class="card-title">{{product_description.title}}</h5>
 <!--        вывод кнопки магазина и переход на нее-->
+
         {% for shop_description in shopsDescriptions%}
             {% if product_description.product.shop.title == shop_description.shop.title%}
             <a href="{{ shop_description.get_absolute_url }}">{{shop_description.shop.title}}</a>
