--- a/cryptomap/products/templates/products/all_products.html
+++ b/cryptomap/products/templates/products/all_products.html
@@ -3,6 +3,19 @@
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
 
+<div class="search-bar ">
+  <h4>Поиск продукта</h4>
+  <form action="{% url 'searchProduct' %}" method="get"
+        class="form-inline my-2 my-lg-0 d-flex flex-row justify-content-between">
+    <input class="form-control mr-sm-2" type="search" placeholder="Введите название..." name="q">
+
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+      <span>Search</span>
+    </button>
+
+  </form>
+</div>
+
 <form action="{% url 'shopFilter' %}" method="get">
   <div class="left-side mt-3">
     <h4 class="sear-head editContent">Категории</h4>
@@ -33,12 +46,13 @@
 {% endblock %}
 
 {% block title %}
-  Все товары
+  {{ category.title }}
 {% endblock %}
 
 {% block content %}
 
-{% for product_description in Product %}
+
+{% for product_description in products %}
 <div class="card mb-3 mt-3" style="max-width: 740px;">
   <div class="row g-0">
     <div class="col-md-4">
@@ -50,10 +64,8 @@
     </div>
     <div class="col-ml-8 ">
       <div class="card-body mr-1 ml-5">
-
-        <h5 class="card-title">{{product_description.title}}</h5>
+        <h5 class="card-title">{{product_description.product.title}}</h5>
 <!--        вывод кнопки магазина и переход на нее-->
-
         {% for shop_description in shopsDescriptions%}
             {% if product_description.product.shop.title == shop_description.shop.title%}
             <a href="{{ shop_description.get_absolute_url }}">{{shop_description.shop.title}}</a>
@@ -61,10 +73,10 @@
         {% endfor %}
 
         <p class="card-text">{{product_description.description}}</p>
-        <p class="card-text">{{product_description.price_rub|floatformat:"0" }} рублей</p>
-        <p class="card-text">{{product_description.price_btc}} btc</p>
-        <a href="{{ product_description.get_absolute_url }}" class="btn btn-primary">Поподробнее</a>
-        <p class="card-text"><small class="text-muted">Размещен: {{product_description.created_at }}</small></p>
+        <p class="card-text">{{product_description.product.price_rub|floatformat:"0" }} рублей</p>
+        <p class="card-text">{{product_description.product.price_btc}} btc</p>
+        <a href="{{ product_description.product.get_absolute_url }}" class="btn btn-primary">Поподробнее</a>
+        <p class="card-text"><small class="text-muted">Размещен: {{product_description.product.created_at }}</small></p>
       </div>
     </div>
   </div>
