--- a/cryptomap/shops/templates/shops/view_users_shops.html
+++ b/cryptomap/shops/templates/shops/view_users_shops.html
@@ -6,6 +6,26 @@
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+<ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'account' %}">Account</a>
+    <span class="badge badge-primary badge-pill">14</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
+    <span class="badge badge-primary badge-pill">2</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+</ul>
+
 {% endblock %}
 
 {% block content %}
