--- a/cryptomap/tracker/templates/tracker/view_tracker.html
+++ b/cryptomap/tracker/templates/tracker/view_tracker.html
@@ -3,82 +3,105 @@
 {% load tracker_tags %}
 
 {% block title %}
-   - {{ block.super}}
+- {{ block.super}}
 {% endblock %}
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+
+<ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'account' %}">Account</a>
+    <span class="badge badge-primary badge-pill">14</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
+    <span class="badge badge-primary badge-pill">2</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+</ul>
+
 {% endblock %}
 
 {% block content %}
 
 {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong id="successMessage">{{ message }}</strong>
-      </div>
-    {% endfor %}
+{% for message in messages %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong id="successMessage">{{ message }}</strong>
+</div>
+{% endfor %}
 {% endif %}
 
-<table id="itemTable" class="table" >
-  <thead>
+<table id="itemTable" class="table">
+    <thead>
     <tr>
-      <th scope="col">Наименование</th>
-      <th scope="col">Цена в рублях</th>
-      <th scope="col">Цена в биткоинах</th>
-      <th scope="col">Цена в биткоинах сейчас</th>
-      <th scope="col">Ожидаемая цена</th>
-      <th scope="col">Скидка</th>
+        <th scope="col">Наименование</th>
+        <th scope="col">Цена в рублях</th>
+        <th scope="col">Цена в биткоинах</th>
+        <th scope="col">Цена в биткоинах сейчас</th>
+        <th scope="col">Ожидаемая цена</th>
+        <th scope="col">Скидка</th>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
     {% for product in tracker.products.all%}
     <tr id="item-{{product.id}}">
-      <th scope="row">{{product.product.title}}</th>
-      <td>{{product.beginning_price_rub |floatformat:"0" }} рублей</td>
-      <td>{{product.beginning_price_btc}} btc</td>
-      <td>{% multiply price_btc product.beginning_price_btc %}</td>
-      <td>
-       {{product.requested_price}}
-      </td>
-      <th>{{product.discount_price}} rub</th>
-      <td align="center">
-        <button class="btn btn-success form-control" onClick="editProduct({{product.id}})" data-toggle="modal"
-                data-target="#myModal")>Изменить</button>
-      </td>
-      <td align="center">
-        <button class="btn btn-danger form-control" onClick="deleteItem({{product.id}})">Удалить</button>
-      </td>
+        <th scope="row">{{product.product.title}}</th>
+        <td>{{product.beginning_price_rub |floatformat:"0" }} рублей</td>
+        <td>{{product.beginning_price_btc}} btc</td>
+        <td>{% multiply price_btc product.beginning_price_btc %}</td>
+        <td>
+            {{product.requested_price}}
+        </td>
+        <th>{{product.discount_price}} rub</th>
+        <td align="center">
+            <button class="btn btn-success form-control" onClick="editProduct({{product.id}})" data-toggle="modal"
+                    data-target="#myModal" )>Изменить
+            </button>
+        </td>
+        <td align="center">
+            <button class="btn btn-danger form-control" onClick="deleteItem({{product.id}})">Удалить</button>
+        </td>
     </tr>
     {% endfor %}
-  </tbody>
+    </tbody>
 </table>
 
 <div class="card-footer text-muted">
-  <p >Всего отслеживаемых:<span id="countItems">{{ tracker.total_products}}</span> </p>
+    <p>Всего отслеживаемых:<span id="countItems">{{ tracker.total_products}}</span></p>
 </div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Update User</h4>
-      </div>
-      <form id="updateUser" action="">
-        <div class="modal-body">
-          <label for="percent">Процент изменения</label>
-          <input class="form-control" id="form-age" type="number" name="formPercent" min=10 max=100/>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">×</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Update User</h4>
+            </div>
+            <form id="updateUser" action="">
+                <div class="modal-body">
+                    <label for="percent">Процент изменения</label>
+                    <input class="form-control" id="form-age" type="number" name="formPercent" min=10 max=100/>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </form>
         </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Save changes</button>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </form>
     </div>
-  </div>
 </div>
 
 {% block javascript %}
@@ -157,6 +180,7 @@ function deleteItem(id) {
     });
   }
 }
+
 </script>
 {% endblock javascript %}
 {% endblock %}
