--- a/cryptomap/user/templates/user/account.html
+++ b/cryptomap/user/templates/user/account.html
@@ -6,12 +6,32 @@
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+<ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'account' %}">Account</a>
+    <span class="badge badge-primary badge-pill">14</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
+    <span class="badge badge-primary badge-pill">2</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+</ul>
+
 {% endblock %}
 
 {% block content %}
 
 
-<form class="form-signin" method="post">{% csrf_token %}
+<form class="form-signin mt-3" method="post">{% csrf_token %}
 
     <h1 class="h3 mb-3 fw-normal ">Account</h1>
     <div class="form-floating mb-3">
