--- a/cryptomap/user/templates/user/contact_form.html
+++ b/cryptomap/user/templates/user/contact_form.html
@@ -6,6 +6,26 @@
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+<ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'account' %}">Account</a>
+    <span class="badge badge-primary badge-pill">14</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
+    <span class="badge badge-primary badge-pill">2</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    <span class="badge badge-primary badge-pill">1</span>
+  </li>
+</ul>
+
 {% endblock %}
 
 {% block content %}
@@ -21,7 +41,7 @@
 
 <h1>Обратная связь</h1>
 
-<form method="post">
+<form method="post" class="mt-3">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Отправить</button>
