добавил иконки в сайтбары аккаунта

--- a/cryptomap/tracker/templates/tracker/view_tracker.html
+++ b/cryptomap/tracker/templates/tracker/view_tracker.html
@@ -13,19 +13,19 @@
 <ul class="list-group">
   <li class="list-group-item d-flex justify-content-between align-items-center">
     <a class="dropdown-item" href="{% url 'account' %}">Account</a>
-    <span class="badge badge-primary badge-pill">14</span>
+    <i class="fas fa-user-circle"></i>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
-    <span class="badge badge-primary badge-pill">2</span>
+    <i class="fas fa-store-alt"></i>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
-    <span class="badge badge-primary badge-pill">1</span>
+    <i class="fas fa-chart-line"></i>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-    <span class="badge badge-primary badge-pill">1</span>
+    <i class="fas fa-sign-out-alt"></i>
   </li>
 </ul>
 
