--- a/cryptomap/templates/registration/password_reset_done.html
+++ b/cryptomap/templates/registration/password_reset_done.html
@@ -1,5 +1,28 @@
 {% extends 'base.html' %}
 
+{% block sidebar %}
+{% include 'inc/_sidebar.html' %}
+
+<ul class="nav flex-column ">
+  <li class="nav-item">
+    <a class="nav-link text-dark" aria-current="page" href="{% url 'profile' user_id=request.user.id %}">Профиль</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_users_shops' %}">Ваши магазины</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_tracker' %}">Список отслеживаемых</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'password_change' %}">Сменить пароль</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
+  </li>
+</ul>
+
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
