--- a/cryptomap/tracker/templates/tracker/view_tracker.html
+++ b/cryptomap/tracker/templates/tracker/view_tracker.html
@@ -9,26 +9,21 @@
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
 
-<ul class="list-group">
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'profile' user_id=request.user.id %}">Profile</a>
-    <i class="fas fa-user-circle"></i>
+<ul class="nav flex-column ">
+  <li class="nav-item">
+    <a class="nav-link text-dark" aria-current="page" href="{% url 'profile' user_id=request.user.id %}">Профиль</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
-    <i class="fas fa-store-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_users_shops' %}">Ваши магазины</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
-    <i class="fas fa-chart-line"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_tracker' %}">Список отслеживаемых</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-    <i class="fas fa-sign-out-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'password_change' %}">Сменить пароль</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-    <i class="fas fa-sign-out-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
   </li>
 </ul>
 
