--- a/cryptomap/shops/templates/shops/view_shops.html
+++ b/cryptomap/shops/templates/shops/view_shops.html
@@ -6,44 +6,89 @@
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+
+
+<div class="card mb-3 mt-3" style="max-width: 540px;">
+    <div class="p-3 bg-white">
+        <div class="about-product text-center mt-2">
+            {% if shop.photo %}
+            <img src="{{ shop.photo.url}}" width="350" class="mr-3" alt="">
+            {% else %}
+            <img src="http://s1.iconbird.com/ico/2014/1/606/w512h5121390848250shop512.png" width="300">
+            {% endif %}
+            <div class="mt-3">
+                <h4>{{shop.shop.title}}</h4>
+                <h6 class="mt-0 text-black-50">{{shop.description}}</h6>
+            </div>
+        </div>
+        <div class="stats mt-3">
+            <div class="d-flex justify-content-between p-price">
+                <span>Категория</span><span>{{shop.category.title}}</span>
+            </div>
+            <div class="d-flex justify-content-between p-price">
+              <span>Адрес</span><span>{{shop.shop.address}}</span>
+            </div>
+            <div class="d-flex justify-content-between p-price">
+              <span>Почта</span><span>{{shop.email}}</span>
+            </div>
+            <div class="d-flex justify-content-between p-price">
+              <span>Владелец</span><span>{{shop.shop.owner.username}}</span>
+            </div>
+            <div class="d-flex justify-content-between p-price">
+              <span>Телеграмм</span><span>{{shop.telegram_url}}</span>
+            </div>
+        </div>
+
+        <div class="inline-block mt-3">
+            <button onclick="location.href='{{ product_description.product.get_absolute_url }}'" type="button"
+                    class="btn btn-dark mt-3">Написать
+            </button>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block content %}
 
-<div class="card mt-3 mb-3">
-  <div class="card-header">
-    Категория: <a href="{{ shop.category.get_absolute_url }}">{{shop.category}}</a>
-  </div>
-  <div class="card-body">
-    <div class="media">
-      {% if shop.photo %}
-      <img src="{{ shop.photo.url}}" width="350" class="mr-3" alt="">
-      {% else %}
-      <img src="https://picsum.photos/id/1060/200/300/?blur" alt="">
-      {% endif %}
-      <div class="media-body">
-        <h5 class="card-title">{{shop.shop.title}}</h5>
-        <p class="card-text">{{shop.shop.address}}</p>
-        <p class="card-text">{{shop.email}}</p>
-        <p class="card-text">{{shop.url}}</p>
-        <p class="card-text">{{shop.description}}</p>
-
-        {% for product in products%}
-        <div class="card mb-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">{{product.title}}</h5>
-            <p class="card-text">{{product.price_rub |floatformat:"0" }} рублей</p>
-            <p class="card-text">{{product.price_btc}} btc</p>
-            <a href="{{ product.get_absolute_url }}" class="btn btn-primary">Поподробнее</a>
+<div class="mt-3 mb-3">
+  <div class="row">
+    {% for product in products%}
+    <div class="col-sm-6 my-3">
+      <div class="card">
+        <div class="card-body">
+            <div class="about-product text-center my-3">
+            {% if product.photo %}
+            <img src="{{ product.photo.url}}" width="300" height="230" class="mr-3 rounded" alt="">
+            {% else %}
+            <img src="https://www.orientalheritageagra.com/wp-content/uploads/2019/03/product-png-image-59158.png" class="rounded" width="300" height="230">
+            {% endif %}
+            </div>
+          <h5 class="card-title">{{product.product.title}}</h5>
+          <p class="card-text">{{product.description}}</p>
+          <div class="d-flex justify-content-between p-price">
+              <span>Цена</span><span>{{product.product.price_rub |floatformat:"0" }} р.</span>
+          </div>
+          <div class="d-flex justify-content-between p-price">
+              <span>Цена в btc</span><span>{{product.product.price_btc}} btc</span>
+          </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4">
+              <span>Итог</span><span>$7,197.00</span>
+            </div>
+          <div class="mt-5 text-left">
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'add_to_tracker' product_id=product.product.id%}">
+                <button class=" mb-3 btn btn-dark">Отслеживать</button>
+            </a>
+            {% else %}
+            <a class="btn btn-outline-dark" href="{% url 'register' %}">Регистрация</a> | <a
+                class="p-2 text-secondary outline" href="{% url 'login' %}">Вход</a>
+            {% endif %}
           </div>
         </div>
-        {% endfor %}
-
       </div>
     </div>
-  </div>
-  <div class="card-footer text-muted">
-    {{shop.shop.created_at }}
+    {% endfor %}
   </div>
 </div>
 
