--- a/cryptomap/templates/inc/_footer.html
+++ b/cryptomap/templates/inc/_footer.html
@@ -1,85 +1,77 @@
 <!-- Footer -->
-
-<footer class="page-footer  font-small mdb-color pt-4 bg-dark">
+<footer class="page-footer font-small bg-dark pt-4 text-light ">
 
   <!-- Footer Links -->
-  <div class="container text-center text-md-left text-light">
+  <div class="container-fluid text-center text-md-left" >
 
-    <!-- Footer links -->
-    <div class="row text-center text-md-left mt-3 pb-3 text-light ">
+    <!-- Grid row -->
+    <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-4 col-lg-1 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
+      <div class="col-md-6 mt-md-0 mt-3 ">
+
+        <!-- Content -->
+        <h5 class="text-uppercase ">О проекте</h5>
+        <p >Наша цель популизация цифровых активов в качестве средства оплаты</p>
+
       </div>
       <!-- Grid column -->
 
-      <hr class="w-100 clearfix d-md-none">
+      <hr class="clearfix w-100 d-md-none pb-3">
 
       <!-- Grid column -->
-      <div class="col-md-4 col-lg-1 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Links</h6>
-        <p>
-          <a href="{% url 'home' %}" class="nav-link text-light ">Home</a>
-        </p>
-        <p>
-          <a href="#!" class="nav-link text-light">Shops</a>
-        </p>
-        <p>
-          <a href="#!" class="nav-link text-light">Products</a>
-        </p>
-        <p>
-          <a href="#!" class="nav-link text-light">Map</a>
-        </p>
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase" >Навигация</h5>
+
+        <ul class="list-unstyled ">
+          <li>
+            <a href="{% url 'home' %}" class="text-light" style=" text-decoration: none;">Магазины</a>
+          </li>
+          <li>
+            <a href="{% url 'all_products' %}" class="text-light" style=" text-decoration: none;">Товары</a>
+          </li>
+          <li>
+            <a href="{% url 'map' %}" class="text-light" style=" text-decoration: none;">Карта</a>
+          </li>
+          <li>
+            <a href="{% url 'prediction' coin='BTC' %}" class="text-light" style=" text-decoration: none;">Прогноз</a>
+          </li>
+        </ul>
+
       </div>
       <!-- Grid column -->
 
-      <hr class="w-100 clearfix d-md-none">
-
       <!-- Grid column -->
-      <div class="col-md-4 col-lg-1 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
-        <p>
-          <a href="#!" class="nav-link text-light">Your Account</a>
-        </p>
-        <p>
-          <a href="#!" class="nav-link text-light">Become an Affiliate</a>
-        </p>
-        <p>
-          <a href="#!" class="nav-link text-light">Shipping Rates</a>
-        </p>
-        <p>
-          <a href="#!" class="nav-link text-light">Help</a>
-        </p>
-      </div>
+      <div class="col-md-3 mb-md-0 mb-3">
 
-      <!-- Grid column -->
-      <hr class="w-100 clearfix d-md-none">
+        <!-- Links -->
+        <h5 class="text-uppercase">Контакты</h5>
 
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-1 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-        <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-        <p>
-          <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-        <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+        <ul class="list-unstyled text-light" >
+          <li>
+            <a href="#!" class="text-light" style=" text-decoration: none;">cryptomap2021@gmail.com</a>
+          </li>
+          <li>
+            <a href="{% url 'contact_form' %}" class="text-light" style=" text-decoration: none;">Обратная связь</a>
+          </li>
+        </ul>
+
       </div>
       <!-- Grid column -->
 
     </div>
-    <!-- Footer links -->
-
-
+    <!-- Grid row -->
 
   </div>
   <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2021 Copyright:
+    <a class="text-light " style=" text-decoration: none;" href="https://github.com/ruslanofc/cryptomap"> ruslanofc</a>
+  </div>
+  <!-- Copyright -->
 
 </footer>
 <!-- Footer -->
