--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                <li class="nav-item"><a class="nav-link text-light" href="{% url 'home' %}">Crypto map</a></li>
+                <li class="nav-item"><a class="nav-link text-light" href="{% url 'home' %}">Главная</a></li>
                 <li class="nav-item"><a class="nav-link text-light" href="{% url 'home' %}">Магазины</a></li>
                 <li class="nav-item"><a class="nav-link text-light" href="{% url 'map' %}">Карта</a></li>
 
@@ -40,7 +40,7 @@
             {% if request.user.is_authenticated %}
                 <a class="nav-link" href="{% url 'profile' user_id=request.user.id %}" role="button">{{ request.user.username }}</a>
             {% else %}
-                <a class="btn text-light" href="{% url 'register' %}">Register</a> | <a class="btn text-light" href="{% url 'login' %}">Log in</a>
+                <a class="btn text-light shadow-none"  href="{% url 'register' %}">Регистрация</a> | <a class="btn text-light shadow-none" href="{% url 'login' %}">Вход</a>
             {% endif %}
         </span>
     </div>
