--- a/cryptomap/templates/registration/password_change.html
+++ b/cryptomap/templates/registration/password_change.html
@@ -3,26 +3,21 @@
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
 
-<ul class="list-group">
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'profile' user_id=request.user.id %}">Profile</a>
-    <i class="fas fa-user-circle"></i>
+<ul class="nav flex-column ">
+  <li class="nav-item">
+    <a class="nav-link text-dark" aria-current="page" href="{% url 'profile' user_id=request.user.id %}">Профиль</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
-    <i class="fas fa-store-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_users_shops' %}">Ваши магазины</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
-    <i class="fas fa-chart-line"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_tracker' %}">Список отслеживаемых</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-    <i class="fas fa-sign-out-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'password_change' %}">Сменить пароль</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-    <i class="fas fa-sign-out-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
   </li>
 </ul>
 
@@ -63,10 +58,10 @@
 
 
 <form method="POST" class="form-signin">{% csrf_token %}
-  <h1 class="h3 mb-3 font-weight-normal">Password change</h1>
-    <input name="old_password" class="form-control" placeholder="Old password" type="password" id="id_old_password" required="true">
-    <input name="new_password1" class="form-control" placeholder="New password" type="password" id="id_new_password1" required="true">
-    <input name="new_password2" class="form-control" placeholder="Confirm password" type="password" id="id_new_password2" required="true">
+  <h1 class="h3 mb-3 font-weight-normal">Смена пароля</h1>
+    <input name="old_password" class="form-control" placeholder="Старый пароль" type="password" id="id_old_password" required="true">
+    <input name="new_password1" class="form-control" placeholder="Новый пароль" type="password" id="id_new_password1" required="true">
+    <input name="new_password2" class="form-control" placeholder="Подтвердить пароль" type="password" id="id_new_password2" required="true">
 
     {% for field in form %}
       {% for error in field.errors %}
@@ -76,7 +71,7 @@
 
 
 
-  <button class="btn btn-dark mt-3" type="submit">Update</button>
+  <button class="btn btn-dark mt-3" type="submit">Обновить</button>
 </form>
 
 
