--- a/cryptomap/templates/registration/password_reset_form.html
+++ b/cryptomap/templates/registration/password_reset_form.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block sidebar %}
+{% include 'inc/_sidebar.html' %}
+
+
+
+{% endblock %}
 
 {% block content %}
 
@@ -36,9 +42,9 @@
 
 
 <form method="POST" class="form-signin">{% csrf_token %}
-	<h1 class="h3 mb-3 font-weight-normal">Reset password</h1>
-    <input name="email" class="form-control" placeholder="Email address" type="email" id="id_email" required="true">
-	<button class="btn btn-lg btn-primary btn-block" type="submit">Send reset email</button>  
+	<h1 class="h3 mb-3 font-weight-normal">Сбросить пароль</h1>
+    <input name="email" class="form-control" placeholder="Введите почту" type="email" id="id_email" required="true">
+	<button class="btn btn-lg btn-dark btn-block center" type="submit">Отправить на почту</button>
 </form>
 
 
