--- a/cryptomap/user/templates/user/profile.html
+++ b/cryptomap/user/templates/user/profile.html
@@ -6,26 +6,22 @@
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
 
-<ul class="list-group">
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'profile' user_id=request.user.id %}">Profile</a>
-    <i class="fas fa-user-circle"></i>
+
+<ul class="nav flex-column ">
+  <li class="nav-item">
+    <a class="nav-link text-dark" aria-current="page" href="{% url 'profile' user_id=request.user.id %}">Профиль</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'view_users_shops' %}">Shops</a>
-    <i class="fas fa-store-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_users_shops' %}">Ваши магазины</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'view_tracker' %}">Tracker</a>
-    <i class="fas fa-chart-line"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'view_tracker' %}">Список отслеживаемых</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-    <i class="fas fa-sign-out-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'password_change' %}">Сменить пароль</a>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-    <i class="fas fa-sign-out-alt"></i>
+  <li class="nav-item">
+    <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
   </li>
 </ul>
 
@@ -41,7 +37,7 @@
           <nav aria-label="breadcrumb" class="main-breadcrumb">
             <ol class="breadcrumb">
 
-              <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+              <li class="breadcrumb-item active" aria-current="page">Ваш профиль</li>
             </ol>
           </nav>
           <!-- /Breadcrumb -->
@@ -61,33 +57,33 @@
             </div>
 
             <div class="col-md-8">
-              <div class="card mb-3">
+              <div class="card mb-4">
                 <div class="card-body">
                   <div class="row">
                   </div>
                   <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Email</h6>
+                    <div class="col-sm-6">
+                      <h6 class="mb-0">Почта</h6>
                     </div>
-                    <div class="col-sm-9 text-secondary">
+                    <div class="col-sm-6 text-secondary">
                         {{user.email}}
                     </div>
                   </div>
                   <hr>
                   <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Date joined</h6>
+                    <div class="col-sm-6">
+                      <h6 class="mb-0">Дата регистрации</h6>
                     </div>
-                    <div class="col-sm-9 text-secondary">
+                    <div class="col-sm-6 text-secondary">
                         {{user.date_joined}}
                     </div>
                   </div>
                   <hr>
                   <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Last login</h6>
+                    <div class="col-sm-6">
+                      <h6 class="mb-0">Последний вход</h6>
                     </div>
-                    <div class="col-sm-9 text-secondary">
+                    <div class="col-sm-6 text-secondary">
                         {{user.last_login}}
                     </div>
                   </div>
@@ -95,7 +91,7 @@
 
                   <div class="row">
                     <div class="col-sm-12">
-                        <a href="{% url 'account' %}" class="btn btn-dark">Edit</a>
+                        <a href="{% url 'account' %}" class="btn btn-dark">Настройки</a>
                     </div>
                   </div>
                 </div>
