--- a/cryptomap/products/templates/products/all_products.html
+++ b/cryptomap/products/templates/products/all_products.html
@@ -85,9 +85,15 @@
             </button>
             {% endif %}
             {% endfor %}
-            <button onclick="location.href='{{ product_description.product.get_absolute_url }}'" type="button"
-                    class="btn btn-dark mt-3">Поподробнее
-            </button>
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'add_to_tracker' product_id=product_description.product.id%}">
+                <button class="mt-3 btn btn-dark">Отслеживать</button>
+            </a>
+            {% else %}
+            <a class="mt-3 btn btn-dark" href="{% url 'register' %}">Регистрация</a> <a
+                class="mt-3 btn btn-dark " href="{% url 'login' %}">Вход</a>
+            {% endif %}
+
 
         </div>
     </div>
