--- a/cryptomap/shops/templates/shops/add_shops.html
+++ b/cryptomap/shops/templates/shops/add_shops.html
@@ -1,77 +1,103 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Добавление магазина - {{ block.super}}
+Добавление магазина - {{ block.super}}
 {% endblock %}
 
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
+
+ <div class="card-body mt-3 ">
+    <h5 class="card-title">О проекте</h5>
+    <p class="card-text">Наша цель популизация цифровых активов в качестве средства оплаты</p>
+  </div>
 {% endblock %}
 
 {% block content %}
 
-<h1>Добавление магазина</h1>
 
-<form action="{% url 'add_shops' %}" method="post">
 
-    {% csrf_token %}
+<div class="my-3 rounded py-3">
 
-    {% comment %}
-    {{ shopsForm.as_p }}
-    {% endcomment %}
+    <form action="{% url 'add_shops' %}" method="post" class="form-row mt-3">
 
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.owner.id_for_label }}">Владелец :</label>
-        {{shopsForm.owner}}
-        <div class="invalid-feddback">
-            {{shopsForm.owner.errors}}
-        </div>
-    </div>
+        <h3 class="my-3 text-center">Добавление магазина</h3>
 
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.title.id_for_label }}">Название :</label>
-        {{shopsForm.title}}
-        <div class="invalid-feddback">
-            {{shopsForm.title.errors}}
-        </div>
-    </div>
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.city.id_for_label }}">Город :</label>
-        {{shopsForm.city}}
-        <div class="invalid-feddback">
-            {{shopsForm.city.errors}}
-        </div>
-    </div>
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.address.id_for_label }}">Адрес :</label>
-        {{shopsForm.address}}
-        <div class="invalid-feddback">
-            {{shopsForm.address.errors}}
-        </div>
-    </div>
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.latitude.id_for_label }}">Широта :</label>
-        {{shopsForm.latitude}}
-        <div class="invalid-feddback">
-            {{shopsForm.latitude.errors}}
-        </div>
-    </div>
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.longitude.id_for_label }}">Долгота :</label>
-        {{shopsForm.longitude}}
-        <div class="invalid-feddback">
-            {{shopsForm.longitude.errors}}
-        </div>
-    </div>
-    <div class="form-group mb-3">
-        <label for="{{ shopsForm.is_published.id_for_label }}">Опубликовать :</label>
-        {{shopsForm.is_published}}
-        <div class="invalid-feddback">
-            {{shopsForm.is_published.errors}}
-        </div>
-    </div>
+        {% csrf_token %}
 
-    <button type="submit" class="btn btn-dark btn-block">Добавить магазин</button>
-</form>
+        {% comment %}
+        {{ shopsForm.as_p }}
+        {% endcomment %}
+
+        <div class="form-row text-center">
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.owner.id_for_label }}">Владелец</label>
+                <div class="">
+                    {{shopsForm.owner}}
+                </div>
+                <div class="invalid-feddback">
+                    {{shopsForm.owner.errors}}
+                </div>
+            </div>
+
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.title.id_for_label }}">Название</label>
+                <div>
+                    {{shopsForm.title}}
+                </div>
+                <div class="invalid-feddback">
+                    {{shopsForm.title.errors}}
+                </div>
+            </div>
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.city.id_for_label }}">Город</label>
+                <div>
+                    {{shopsForm.city}}
+                </div>
+                <div class="invalid-feddback">
+                    {{shopsForm.city.errors}}
+                </div>
+            </div>
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.address.id_for_label }}">Адрес</label>
+                <div>
+                    {{shopsForm.address}}
+                </div>
+                <div class="invalid-feddback">
+                    {{shopsForm.address.errors}}
+                </div>
+            </div>
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.latitude.id_for_label }}">Широта</label>
+                <div>
+                    {{shopsForm.latitude}}
+                </div>
+                <div class="invalid-feddback">
+                    {{shopsForm.latitude.errors}}
+                </div>
+            </div>
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.longitude.id_for_label }}">Долгота</label>
+                <div>
+                    {{shopsForm.longitude}}
+                </div>
+                <div class="invalid-feddback">
+                    {{shopsForm.longitude.errors}}
+                </div>
+            </div>
+            <div class="form-group mb-3">
+                <label for="{{ shopsForm.is_published.id_for_label }}">Опубликовать</label>
+                {{shopsForm.is_published}}
+                <div class="invalid-feddback">
+                    {{shopsForm.is_published.errors}}
+                </div>
+            </div>
+            <button type="submit" class="btn btn-dark btn-block mt-3 ">Добавить магазин</button>
+        </div>
+
+
+    </form>
+
+</div>
 
 {% endblock %}
