--- a/cryptomap/templates/registration/password_change.html
+++ b/cryptomap/templates/registration/password_change.html
@@ -3,7 +3,7 @@
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
 
-<ul class="nav flex-column ">
+<ul class="nav flex-column mt-5">
   <li class="nav-item">
     <a class="nav-link text-dark" aria-current="page" href="{% url 'profile' user_id=request.user.id %}">Профиль</a>
   </li>
@@ -57,7 +57,7 @@
 </style>
 
 
-<form method="POST" class="form-signin">{% csrf_token %}
+<form method="POST" class="form-signin mt-5 text-center">{% csrf_token %}
   <h1 class="h3 mb-3 font-weight-normal">Смена пароля</h1>
     <input name="old_password" class="form-control" placeholder="Старый пароль" type="password" id="id_old_password" required="true">
     <input name="new_password1" class="form-control" placeholder="Новый пароль" type="password" id="id_new_password1" required="true">
