--- a/cryptomap/shops/templates/shops/view_shops.html
+++ b/cryptomap/shops/templates/shops/view_shops.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load tracker_tags %}
 {% block title %}
   {{ shop.shop.title }} - {{ block.super}}
 {% endblock %}
@@ -72,9 +72,16 @@
           <div class="d-flex justify-content-between p-price">
               <span>Цена в btc</span><span>{{product.product.price_btc}} btc</span>
           </div>
-            <div class="d-flex justify-content-between total font-weight-bold mt-4">
-              <span>Итог</span><span>$7,197.00</span>
+
+
+
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Итог</span><span
+                    class="bg-success rounded p-1">{% multiply price_btc product.product.price_btc %}</span>
             </div>
+
+
+
+
           <div class="mt-5 text-left">
             {% if request.user.is_authenticated %}
             <a href="{% url 'add_to_tracker' product_id=product.product.id%}">
